auto generate frontend types
